--- a/src/main/resources/templates/admin/article/create.html
+++ b/src/main/resources/templates/admin/article/create.html
@@ -1,17 +1,13 @@
-{extend name="base/template"}
+<div id="head" th:include="/admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
+<link rel="stylesheet" href="#" xmlns:th="http://www.thymeleaf.org"
+      th:href="@{{path}/static/admin/lib/editor/css/editormd.css(path=${#servletContext.getContextPath()})}">
 
-{block name="style"}
-<link rel="stylesheet" href="__ADMIN__/lib/editor/css/editormd.css">
-{/block}
-
-{block name="title"}添加文章{/block}
-{block name="content"}
 <div class="x-body layui-anim layui-anim-up">
     <form class="layui-form" action="">
         <div class="layui-form-item">
             <div id="editormd">
-                <textarea style="display:none;" ># Muxi_k's</textarea>
+                <textarea style="display:none;" ># Crying711's</textarea>
             </div>
         </div>
 
@@ -53,11 +49,17 @@
         <div class="layui-form-item">
             <label class="layui-form-label">分类：</label>
             <div class="layui-input-block">
-                <select name="category_id" lay-verify="required" lay-search>
-                    {foreach $category as $key=>$vo}
-                    <option value="{$vo.id}">{$vo.name}</option>
-                    {/foreach}
+                <select name="category_id" lay-verify="required" lay-search >
+                        <span xmlns:th="http://www.thymeleaf.org"
+                              th:each="vo:${category}">
+
+                                        <option th:value="${vo.id}" th:text="${vo.name}">{$vo.name}</option>
+
+
+                </span>
+
                 </select>
+
             </div>
         </div>
 
@@ -88,10 +90,10 @@
     </form>
 </div>
 
-{/block}
 
-{block name="script"}
-<script src="__ADMIN__/lib/editor/editormd.js"></script>
+<script xmlns:th="http://www.thymeleaf.org"
+
+        th:src="@{{path}/static/admin/lib/editor/editormd.js(path=${#servletContext.getContextPath()})}"></script>
 <script>
     var Editor;
 
@@ -172,4 +174,5 @@
 
     });
 </script>
-{/block}
+<div id="footer" th:include="/admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
+
