--- a/src/main/resources/templates/admin/article/edit.html
+++ b/src/main/resources/templates/admin/article/edit.html
@@ -1,17 +1,16 @@
-{extend name="base/template"}
+
+<div id="head" th:include="/admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
 
-{block name="style"}
-<link rel="stylesheet" href="__ADMIN__/lib/editor/css/editormd.css">
-{/block}
+<link rel="stylesheet"   xmlns:th="http://www.w3.org/1999/xhtml" th:href="@{{path}/static/admin/lib/editor/css/editormd.css(path=${#servletContext.getContextPath()})}">
 
-{block name="title"}修改文章{/block}
-{block name="content"}
-<div class="x-body layui-anim layui-anim-up">
+
+
+<div class="x-body layui-anim layui-anim-up"   xmlns:th="http://www.w3.org/1999/xhtml">
     <form class="layui-form" action="">
         <div class="layui-form-item">
             <div id="editormd">
-                <textarea style="display:none;">{$article.source}</textarea>
+                <textarea style="display:none;" th:text="${edit.source}">{$article.source}</textarea>
             </div>
         </div>
 
@@ -20,7 +19,7 @@
             <div class="layui-input-block">
                 <div class="layui-upload">
                     <div class="layui-upload-list">
-                        <img class="layui-upload-img" id="demo1" width="400" src="{$article.pic}">
+                        <img class="layui-upload-img" id="demo1" width="400" th:src="${edit.pic}">
                         <p id="demoText"></p>
                     </div>
                     <button type="button" class="layui-btn layui-btn-danger" id="test1"><i class="layui-icon"></i>上传图片
@@ -33,7 +32,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">标题:</label>
             <div class="layui-input-block">
-                <input type="text" name="title" value="{$article.title}" required lay-verify="required"
+                <input type="text" name="title" th:value="${edit.title}" required lay-verify="required"
                        placeholder="请输入标题" autocomplete="off"
                        class="layui-input">
             </div>
@@ -41,13 +40,13 @@
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">描述:</label>
             <div class="layui-input-block">
-                <textarea name="description" value="{$article.description}" placeholder="请输入内容" class="layui-textarea">{$article.description}</textarea>
+                <textarea name="description" th:value="${edit.description}" placeholder="请输入内容" class="layui-textarea" th:text="${edit.description}">{$article.description}</textarea>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">标签:</label>
             <div class="layui-input-block">
-                <input type="text" name="tag" value="{$article.tag}" required lay-verify="required"
+                <input type="text" name="tag" th:value="${edit.tag}" required lay-verify="required"
                        placeholder="请使用 ',' 分割"
                        autocomplete="off" class="layui-input">
             </div>
@@ -55,10 +54,11 @@
         <div class="layui-form-item">
             <label class="layui-form-label">分类：</label>
             <div class="layui-input-block">
-                <select name="category_id" lay-verify="required" lay-search>
-                    {foreach $category as $key=>$vo}
-                    <option value="{$vo.id}">{$vo.name}</option>
-                    {/foreach}
+                <select name="category_id" lay-verify="required" lay-search xmlns:th="http://www.w3.org/1999/xhtml" >
+                    <span th:each="vo:${category}">
+                         <option th:value="${vo.id}" th:text="${vo.name}">#</option>
+
+                    </span>
                 </select>
             </div>
         </div>
@@ -66,8 +66,18 @@
         <div class="layui-form-item">
             <label class="layui-form-label">是否加密：</label>
             <div class="layui-input-block">
-                <input type="checkbox" {if $article.lock eq 1} checked {/if} name="lock" value="1" lay-skin="switch"
-                lay-filter="lock">
+                          <span th:if="${edit.lock} neq 1">
+                              <input type="checkbox"  name="lock" value="1" lay-skin="switch"
+                                       lay-filter="lock">
+
+                         </span>
+                          <span th:if="${edit.lock} eq 1">
+                          <input type="checkbox" checked  name="lock" value="1" lay-skin="switch"
+                                 lay-filter="lock">
+                         </span>
+
+
+
             </div>
         </div>
 
@@ -79,9 +89,9 @@
             </div>
         </div>
 
-        <input type="hidden" name="pic" id="pic" value="{$article.pic}">
-        <input type="hidden" name="content" id="content">
-        <input type="hidden" name="id" value="{$article.id}">
+        <input type="hidden" name="pic" id="pic" th:value="${edit.pic}">
+        <input type="hidden" name="content" id="content" th:value="${edit.content}">
+        <input type="hidden" name="id" th:value="${edit.id}">
 
         <div class="layui-form-item">
             <div class="layui-input-block">
@@ -92,10 +102,7 @@
     </form>
 </div>
 
-{/block}
-
-{block name="script"}
-<script src="__ADMIN__/lib/editor/editormd.js"></script>
+<script  xmlns:th="http://www.w3.org/1999/xhtml" th:src="@{{path}/static/admin/lib/editor/editormd.js(path=${#servletContext.getContextPath()})}"></script>
 <script>
     var Editor;
 
@@ -176,4 +183,5 @@
 
     });
 </script>
-{/block}
+<div id="footer" th:include="/admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
+
